<resources>
    <string name="app_name">Notes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="person">Person</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <string name="avatar">Avatar</string>
    <string name="change_username">Change Username</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="done">Done</string>
    <string name="change_details">Change Details</string>
    <string name="update_details">Update Details</string>
    <string name="write_your_note_here">Write Your Note Here</string>
    <string name="tag">Tag</string>
    <string name="search">Search</string>
</resources>